--- a/src/style/main.css
+++ b/src/style/main.css
@@ -5,7 +5,7 @@
 /* CSS Custom Properties (Design Tokens) */
 :root {
   /* Colors - TODO: Customize these! */
-  --color-primary: #667eea;
+  --color-primary: #141416;
   --color-primary-dark: #5568d3;
   --color-secondary: #764ba2;
   --color-text: #2d3748;
