--- a/src/style/main.css
+++ b/src/style/main.css
@@ -6,8 +6,8 @@
 :root {
   /* Colors - TODO: Customize these! */
   --color-primary: #141416;
-  --color-primary-dark: #5568d3;
-  --color-secondary: #764ba2;
+  --color-primary-dark: #9498aa;
+  --color-secondary: #514e53;
   --color-text: #2d3748;
   --color-text-light: #718096;
   --color-bg: #ffffff;
